# rust-codepix

./: .env  .env.local  Cargo.toml  Dockerfile  Dockerfile.prod  build.rs  dev.db  docker-compose.yaml  package-lock.json  package.json  readme.md
migrations/2022-04-19-020316_table_bank/: up.sql
migrations/2022-04-19-232012_alter_table_account_add_colum_pix_keys/: up.sql
prisma/: dev.db  dev.db-journal  schema.prisma
prisma/dbml/: dev.dbml
prisma/docs/: index.html
prisma/migrations/20220409192814_first/: migration.sql
prisma/migrations/20220409195443_table_pix/: migration.sql
prisma/migrations/20220409202918_second/: migration.sql
prisma/migrations/20220410053801_new/: migration.sql
prisma/migrations/20220414063308_first/: migration.sql
proto/: helloworld.proto
src/: api_error.rs  db.rs  main.rs  prisma_generate.rs  prisma_migrate.rs
src/application/: mod.rs
src/application/factory/: mod.rs
src/application/grpc/: mod.rs  pixgrpc.rs  server.rs
src/application/grpc/pb/: github.com.rustcodepix.rs  helloworld.rs  pixkey.rs
src/application/grpc/protofiles/: pixkey.proto
src/application/kafka/: processor.rs  producer.rs
src/application/model/: mod.rs
src/application/usecase/: mod.rs  pix.rs  transaction.rs
src/cmd/: cmd.rs  mod.rs
src/domain/: mod.rs
src/domain/model/: bank.rs  bank_test.rs  mod.rs
src/domain/model/account/: account_test.rs  mod.rs
src/domain/model/bank/: bank_test.rs  mod.rs
src/domain/model/base/: mod.rs
src/domain/model/pix_key/: conversion.rs  mod.rs  pix_key_test.rs
src/domain/model/transaction/: mod.rs  transaction_test.rs
src/infrastructure/: mod.rs
src/infrastructure/db/: mod.rs  schema.rs
src/infrastructure/prisma_db/: db.rs
src/infrastructure/repository/: mod.rs  pix.rs  transaction.rs
