[package]
name = "rust-codepix"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "codepix-server"
# path = "src/application/grpc/server.rs"

#[[bin]]
#name = "codepix-client"
#path = "src/client.rs"

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }
chrono = "0.4.19"
validator = { version = "0.14.0", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
tokio = { features = ["macros", "rt", "rt-multi-thread"], version = "1.17.0" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.3.1" }
async-trait = "0.1.52"

tonic = "0.7.1"
prost = "0.10.0"
prost-types = "0.10.0"

[build-dependencies]
tonic-build = "0.7.0"

envy = "0.4.2"
dotenv = "0.15.0"


[dev-dependencies]
pretty_assertions = "1.1.0"
