[package]
name = "rust-codepix"
version = "0.1.0"
edition = "2021"

# [[bin]]
# name = "main"
# path = "src/main.rs"

# [[bin]]
# name = "prisma_generate"
# path = "src/prisma_generate.rs"

# [[bin]]
# name = "prisma_migrate"
# path = "src/prisma_migrate.rs"

[dependencies]
uuid = { version = "0.8.2", features = ["serde", "v4"] }

chrono = { version = "0.4.19", features = ["serde"] }

validator = { version = "0.14.0", features = ["derive"] }

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"

diesel = { version = "1.4.8", features = [
  "sqlite",
  "r2d2",
  "numeric",
  "chrono",
] }
diesel_migrations = "1.4.0"

tokio = { features = ["macros", "rt", "rt-multi-thread"], version = "1.17.0" }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.3.1" }

async-trait = "0.1.52"

tonic = "0.7.1"
prost = "0.10.0"
prost-types = "0.10.0"

derive_more = "0.99.17"
log = "0.4.14"
dotenv = "0.15.0"
env_logger = "0.9.0"

[build-dependencies]
tonic-build = "0.7.0"

[dev-dependencies]
pretty_assertions = "1.2.1"


# tokio-stream = "0.1.8"
# futures = "0.3.19"
# bigdecimal = "0.1.2"
# rust-embed = "6.3.0"
# mime = "0.3.16"
# prometheus = { version = "0.13.0", features = ["process"] }
# lazy_static = "1.4.0"
# reqwest = { version = "0.11", features = ["json"] }
